fix: consistent spacing for nested lists

--- a/themes/hugo-theme-codex/assets/scss/partials/_typography.scss
+++ b/themes/hugo-theme-codex/assets/scss/partials/_typography.scss
@@ -67,6 +67,10 @@ ol {
       margin-top: calc(#{$leading} - 1rem);
       margin-bottom: calc(#{$leading} - 1rem);
     }
+
+    ul {
+      margin-top: calc(#{$leading} - 1rem);
+    }
   }
 
   ul,
